# progressivis

./: .gitattributes  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .project  .pylintrc  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  _requirements.txt  app.py  debugging.py  environment-ci.yml  environment.yml  environment310.yml  environment_ci.yml  fabfile.py  jupyter_config.json  jupytext.toml  package.json  progressivis-server  pyproject.toml  pyrightconfig.json  requirements-dask.txt  requirements.txt  requirements_ci.txt  requirements_typing.txt  runserver.py  setup.cfg  setup.py
.github/workflows/: darwin.yaml  doc.yml  python.yml  typing.yml  windows.yaml
benchmarks/: bench_load_csv.py  bench_min_max.ipynb  bench_min_max.py  benchmarkit.py  bmkit_load_csv_mp.py  dump_bmkit.py  new_dump.py  plot_bmkit.py
binder/: create_nyc_minset.sh  environment.yml  postBuild
conda.recipe/: .py  bld.bat  build.sh  meta.yaml
demos/: MBKMeansDemo.ipynb  MBKMeansSimpleDemo.ipynb  MBKMeansWithLabelsDemo.ipynb  PsBoardDemo.ipynb
doc/: Makefile  RunStepDecorators.ipynb  WritingAModule.ipynb  chaining_widgets.md  conf.py  custom_modules.md  dependencies.md  example_categorical_range.py  example_filtermod.py  example_join.py  example_linalg_add.py  example_linalg_cols_add.py  example_linalg_decorators.py  example_linear_map.py  example_mix_nexpr.py  example_mix_ufunc.py  example_range_query.py  example_range_query_2d.py  gallery.md  index.md  index.rst  install.md  intro.md  intro.rst  linalg_binary.csv  linalg_unary.csv  lorem_ipsum.md  make.bat  max.py  module_library.md  notebooks.md  reference.md  reference.rst  requirements_doc.txt  simple_max.py  sniffer.md  standalone_widgets.md  unit_tests.md  userguide.md  userguide1.3-cont.py  (+4 more)
doc/_ext/: progressivis_mmd.py
doc/_params/: progressivis_doc_params.py
doc/_static/: mb_kmeans_cluster_s1.html  mb_kmeans_taxis.html  mnist_tsne2d.html  scenario_using_snippets.html  taxis_borough.html  taxis_precipitations_line_chart.html  taxis_precipitations_scatterplot.html  taxis_trips_density_map.html  trip-rain-corr.html  trip_rain_corr.html  userguide-widgets1.0.html  userguide-widgets1.1.html
doc/notebooks_html/: userguide-widgets1.1.html
examples/: Scatterplot.ipynb  create_nyc_dataset.sh  nyc_dropoff_green.py  nyc_dropoff_yellow.py  nyc_pickup_green.py  nyc_pickup_uber.py  nyc_pickup_yellow.py  test_histogram2d.py  test_histograms.py  test_k_clusters.py  test_knnkde.py  test_mb_k_means.py  test_mcscatterplot.py  test_minmax.py  test_multiclass2d.py  test_multiclass_k_clusters.py  test_ppca_blobs.py  test_ppca_mnist.py  test_scatterplot.py  test_scatterplot2.py  test_simple_k_clusters.py  test_simple_k_clusters_2.py
include/: progressivis_module.hpp
mypy/: module_plugin.py
notebooks/: AnalysisChain.ipynb  AnalysisToC.ipynb  CSVLoading.ipynb  CSVSniffer.ipynb  Constructor.ipynb  DataViewer.ipynb  DataViewerBlobs.ipynb  DynViewer.ipynb  DynViewerBlobs.ipynb  ExampleDataTable.ipynb  ExampleDataTablePandas.ipynb  ExampleProgressBar.ipynb  HeatmapDemo.ipynb  HeatmapDemo2.ipynb  MBKMeansDemo.ipynb  MBKMeansSimpleDemo.ipynb  MBKMeansWithLabelsDemo.ipynb  MultiCSVFileLoading.ipynb  MulticlassScatterplotDemo.ipynb  MulticlassScatterplotDemo.py  PPCAProjectionToy.ipynb  PsBoardDemo.ipynb  PsBoardDemo4Binder.ipynb  PsBoardLocalFiles.ipynb  PsBoardParquet.ipynb  PsBoardPqS3.ipynb  ScalerDemo.ipynb  ScalerDemoCellCmd.ipynb  Summary.ipynb  Summary.py  VegaIssue.ipynb  compression.ipynb  progressive-vega.ipynb  userguide1.0.ipynb  userguide1.0.py  userguide1.1.ipynb  userguide1.1.py  userguide1.2-pandas.ipynb  userguide1.2-pandas.py  userguide1.2.ipynb  (+9 more)
progressive/: __init__.py  changemanager.py  csv_loader.py  dataframe.py  linear_regression.py  module.py  percentiles.py  scheduler.py  settings.py  slot.py  stats.py  time_predictor.py  urls.py  vec_loader.py  views.py  wsgi.py
progressive/core/: changemanager.py  common.py  dataframe.py  merge.py  module.py  mt_scheduler.py  scheduler.py  slot.py  time_predictor.py  tracer.py  utils.py  version.py  wait.py
progressive/io/: csv_loader.py  vec_loader.py
progressive/server/: __init__.py  protocol.py  scheduler_server.py  server.py
progressive/stats/: __init__.py  histogram2d.py  linear_regression.py  percentiles.py  stats.py
progressive/vis/: __init__.py  heatmap.py
progressivemds/: load_vec.py  rand.py
progressivis/: __init__.py
progressivis/arrays/: __init__.py  (+5 more)
progressivis_nb_widgets/: MANIFEST.in  setup.py
recipe/: build.sh  conda_build_config.yaml  meta.yaml  run_test.py
scripts/: create_nyc_parquet.py  estimate_row_size.py  hatch_build.sh  needs_rebuild.sh  print_profile.py  shuffle_csv.py  svmlight2csv.py  test_ppca_blobs.py  test_ppca_mnist.py
static_demos/: MBKMeansWithLabelsDemo.ipynb
stool/: __init__.py  __main__.py  app.py  bench_it.py  case.py  main.py  utils.py
templates/: index.html
tests/: .pylintrc  __init__.py  _csv_crash_utils.py  test_00_bitmap.py  test_00_buffered_matrix.py  test_00_csv_sniffer.py  test_00_fast.py  test_00_file_buffer.py  test_00_intdict.py  test_00_load_datasets.py  test_00_psdict.py  test_00_storageengine.py  test_01_dataflow.py  test_01_input.py  test_01_mmap.py  test_01_module.py  test_01_scheduler.py  test_02_changemanager_bitmap.py  test_02_changemanager_column.py  test_02_changemanager_pintset.py  test_02_changemanager_psdict.py  test_02_changemanager_table.py  test_02_changemanager_table_selected.py  test_02_column.py  test_02_index_update.py  test_02_table.py  test_02_table_computed.py  test_02_table_del.py  test_02_table_eval.py  test_02_table_merge.py  test_02_table_selected.py  test_02_to_dict.py  test_03_aggr.py  test_03_arrays.py  test_03_arrow_batch_loader.py  test_03_bin_join.py  test_03_bin_join2.py  test_03_bin_join3.py  test_03_binning_index.py  test_03_binning_index_nd.py  (+143 more)
tests_js/: index.html  tests-history.js
typings/: datashape.pyi  datasketches.pyi  ipywidgets.pyi  numexpr.pyi  pyroaring.pyi  traitlets.pyi
widgets/: setup.py
workflows/: test_histogram2d.py
(+488 files in other folders)
