[build-system]
requires = [
    "hatchling>=1.18",
    "hatch-vcs",
    "wheel",
    "cython",
]
build-backend = "hatchling.build"

[project]
name = "progressivis"
dynamic = ["version"]
description = "A Progressive Steerable Analytics Toolkit"
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "INRIA, Jean-Daniel Fekete, Christian Poli", email = "jean-daniel.fekete@inria.fr" },
]
keywords = ["Progressive analytics visualization"]

classifiers = [
     "Topic :: Scientific/Engineering :: Visualization",
     "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "Pillow>=4.2.0",
    "numpy",
    "scipy>=0.18.1",
    "numexpr>=2.6.1",
    "pandas>=1.2.5",
    "pyarrow>=8.0.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=5.4.1",
    "tdigest>=0.4.1.0",
    "pyroaring",
    "python-dateutil>=2.6.1",  # botocore wants < 2.7.0,>=2.1
    "boto",
    "s3fs",
    "requests",
    "fast-histogram",
    "rangehttpserver",
    "datasketches",
    "typeguard",
    "multipledispatch >= 0.4.7",  # datashape
    "python-dateutil",  # datashape
    "click",
]

[project.optional-dependencies]

jupyter = ["ipyprogressivis@git+https://github.com/progressivis/ipyprogressivis.git"]

docs = [
    "sphinx<8",
    "sphinx-gallery>=0.11.1",
    "sphinx-autodoc-typehints>=1.20.0",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=0.18.1",
    "pydata-sphinx-theme>=0.12.0",
    "sphinxcontrib-mermaid",
    "graphviz",
    "jinja2",
    "sphinxemoji"
]

test = [
    "pytest",
    "pytest_cov",
    "duckdb",
]

typing = [
    "mypy>=1.0.1",
    "numpy",
    "ipython",
    "jinja2",
    "sqlalchemy-stubs",
    "pandas-stubs",
    "traits-stubs",
    "traittypes",
    "types-pillow",
    "types-pytz",
    "types-pyyaml",
    "types-requests",
    "types-urllib3",
    "typing-extensions",
    "typing_extensions",
    "types-setuptools",
    "typeguard",
    "duckdb",
]

[project.urls]
Homepage = "https://github.com/progressivis/progressivis"

[tool.hatch.build]
artifacts = [
]

[tool.setuptools]
packages = [
    "progressivis",
    "progressivis.utils",
    "progressivis.core",
    "progressivis.storage",
    "progressivis.io",
    "progressivis.stats",
    "progressivis.datasets",
    "progressivis.datashape",
    "progressivis.datashape.util",
    "progressivis.vis",
    "progressivis.cluster",
    "progressivis.server",
    "progressivis.table",
]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "progressivis/_version.py"

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython", "numpy"]
[tool.hatch.build.targets.wheel.hooks.cython.options]
# include .h or .cpp directories
includes = []
# include numpy headers
include_numpy = true
include_pyarrow = false
compile_py = false

[tool.hatch.metadata]
allow-direct-references = true


directives = { boundscheck = false, nonecheck = false, language_level = 3, binding = true }

compile_kwargs = { }

[tool.ruff]
extend-exclude = ["notebooks"]

