[build-system]
requires = [
    "hatchling>=1.18",
    "hatch-vcs",
    "wheel",
]
build-backend = "hatchling.build"

[project]
name = "progressivis"
dynamic = ["version"]
description = "A Progressive Steerable Analytics Toolkit"
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "INRIA, Jean-Daniel Fekete, Christian Poli", email = "jean-daniel.fekete@inria.fr" },
]
keywords = ["Progressive analytics visualization"]

classifiers = [
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Pillow>=4.2.0",
    "numpy",
    "scipy>=0.18.1",
    "numexpr>=2.6.1",
    "pandas>=1.2.5",
    "pyarrow>=8.0.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=5.4.1",
    "tdigest>=0.4.1.0",
    "pyroaring",
    "python-dateutil>=2.6.1",  # datashape, botocore wants < 2.7.0,>=2.1
    "boto",
    "s3fs",
    "requests",
    "fast-histogram",
    "datasketches",
    "typeguard",
    "multipledispatch >= 0.4.7",  # datashape
]

[project.optional-dependencies]

jupyter = ["ipyprogressivis"]

docs = [
    "sphinx<8",
    "sphinx-gallery>=0.11.1",
    "sphinx-autodoc-typehints>=1.20.0",
    "sphinxcontrib-napoleon>=0.7",
    "myst-parser>=0.18.1",
    "pydata-sphinx-theme>=0.12.0",
    "sphinxcontrib-mermaid",
    "graphviz",
    "jinja2",
    "sphinxemoji"
]

scripts = ["click"]

test = [
    "pytest",
    "pytest_cov",
    "duckdb",
    "rangehttpserver",
]

typing = [
    "mypy>=1.0.1",
    "numpy",
    "ipython",
    "jinja2",
    "sqlalchemy-stubs",
    "pandas-stubs",
    "scipy-stubs",
    "traits-stubs",
    "traittypes",
    "types-pillow",
    "types-pytz",
    "types-pyyaml",
    "types-requests",
    "types-urllib3",
    "typing-extensions",
    "typing_extensions",
    "types-setuptools",
    "typeguard",
    "duckdb",
]

[project.urls]
Homepage = "https://github.com/progressivis/progressivis"
Documentation = "https://progressivis.readthedocs.io/en/latest/"
Repository = "https://github.com/progressivis/progressivis.git"

[tool.hatch.build]
artifacts = [
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "progressivis/_version.py"

[tool.hatch.build.targets.sdist]
only-include = [
    "progressivis",
    "progressivis.utils",
    "progressivis.core",
    "progressivis.storage",
    "progressivis.io",
    "progressivis.stats",
    "progressivis.datasets",
    "progressivis.datashape",
    "progressivis.datashape.util",
    "progressivis.vis",
    "progressivis.cluster",
    "progressivis.table",
]

[tool.hatch.build.targets.wheel]

only-include = [
    "progressivis",
    "progressivis.utils",
    "progressivis.core",
    "progressivis.storage",
    "progressivis.io",
    "progressivis.stats",
    "progressivis.datasets",
    "progressivis.datashape",
    "progressivis.datashape.util",
    "progressivis.vis",
    "progressivis.cluster",
    "progressivis.table",
]

[tool.ruff]
extend-exclude = ["notebooks"]

