
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501, W503

[options.extras_require]
test =
     pytest
     pytest-cov
     pytest-env

doc =
    sphinx >= 5.3.0
    sphinx-gallery >= 0.11.1
    sphinx-autodoc-typehints >= 1.20.0
    sphinxcontrib-napoleon >= 0.7
    myst-parser >= 0.18.1
    pydata-sphinx-theme >= 0.12.0
    sphinxcontrib-mermaid
    graphviz
    jinja2
    sphinxemoji

examples =
    jupytext
